style.css
/* ==UserStyle==
@name           Capi AMQ
@author         Capi
@description    `AMQ theme`
==/UserStyle== */

@-moz-document domain("animemusicquiz.com") {
:root {
    --bg: url(https://www.project-imas.com/w/images/6/69/Iori_TD_SSR2.png); /*Change the background of the game*/
}
#startPage {
    background-image: var(--bg);
    background-size: 100% 100%;
}
#gameContainer {
    background-image: var(--bg);
    background-size: cover;
}
#loadingScreen {
    background-image: var(--bg);
    background-size: cover;
}
#gameChatPage > .col-xs-9 {
    background: rgba(0, 0, 0, 0.7);
}
#gcGameChatButton > .col-xs-9 {
    color: #ffffff; 
    box-shadow: none;
    text-shadow: 0 0 20px #96FF96, 0 0 30px #66FF66, 0 0 40px #66FF66, 0 0 50px #66FF66 !important;
}
#rbMajorFilters {
    padding-left: 10px;
    box-shadow: none;
    
}

#xpBarOuter {
	background-color: #87688C; /*Change the color of the background bar of xp*/
    
}
#xpBarInner {
    background: #A30DBB; /*Change the color of the bar of xp*/
    box-shadow: none;

}
.levelText {
    color: #e3fcff; /*Change the Color of text of xp bar*/
}

.lobbyAvatarImgContainer { /*Background of  avatar image lobby*/
    background-color: transparent;
}


#avatarUserImgContainer:hover {
    opacity: 1.0;
    filter: alpha(opacity=100);
}
.lobbyAvatarTextContainer {
    background: rgba(0, 0, 0, 0.7);
}

#gameChatPage > .col-xs-9 {
	background-color: rgba(0, 0, 0, 0);
}
#gameChatContainer {
    background: rgba(0, 0, 0, 0.4);
}    
#qpAnimeNameHider {
    background-color: #1b1b1b;
}

#qpInfoHider {
    background-color: #1b1b1b;
    height: calc(100% - 30px);
}
#xpBarCoverInner {
    background-color: #1b1b1b
}
.qpAvatarNameContainer {
    background-color: #1b1b1b
}
.qpAvatarAnswerContainer {
    background-color: #1b1b1b
}
.rbRoom, .rbrRoomImageContainer {
    background-color: rgba(0, 0, 0, 0.5);
}
.qpAvatarImgContainer {
    box-shadow: none;
    display: inline-block;
    background-color: rgba(0, 0, 0, 0.3);
}
.qpAvatarLevelText {
    background-color: #1b1b1b;
    border-radius: 1px 1px 50px 50px;
                                
}
.qpAvatarPointText {
    background-color: #1b1b1b;
    border-radius: 50px 50px 1px 1px;
}
.qpAvatarNameContainer .avatarIsHostContainer {
    position: fixed;
    left: 24px;
    top: 155px;
    z-index: -1;
}

#mainMenuSocailButton {
    background-color: rgba(0, 0, 0, 0.1);
}
#footerMenuBarBackground, #rightMenuBarPartContainer {
    background-color: rgba(0, 0, 0, 0.3);
}
#mpPlayButton, #mpExpandButton, #mpLeaderboardButton, #mpRankedButton {
    background-color: rgba(0, 0, 0, 0.05);
    box-shadow: none;
    color: white;
    text-shadow: 1px 1px #17202a;
    border-radius: 12px;    
}
#mpPlayButton:hover, #mpExpandButton:hover, #mpLeaderboardButton:hover, #mpRankedButton:hover {
    background-color: rgba(0, 0, 0, 0.5);
    text-shadow: 1px 1px #17202a;
}
#mpRankedDescriptionButton > h1 {
    color: white;  
    text-shadow: 1px 1px #17202a;
}
#mpRankedDescriptionButton {
    background-color: rgba(0, 0, 0, 0.1);
    
}
#mpRankedTimer > h3 {
    color: white;
    text-shadow: 1px 1px #17202a;
}
#mpDriveDonationContainer .button {
    background-color: rgba(0, 0, 0, 0.1);
    box-shadow: 5px 5px transparent;
}
#mpDriveStatsContainer {
    background-color: rgba(0, 0, 0, 0.1);
    box-shadow: 5px 5px transparent;
}
#mpAvatarDriveContainer, #mpAvatarDriveHeaderShadowHider .floatingContainer {
    background-color: rgba(0, 0, 0, 0.5);
    display: none;
}
#mpNewsContainer, #mpNewsTitleShadowHider div {
    background-color: rgba(0, 0, 0, 0.1);
    box-shadow: 5px 5px transparent;
    text-shadow: 1px 1px #17202a;
    display: none;
}
#mpRankedDescriptionButton {
    background-color: rgba(1, 1, 1, 1.5); 
}
#mpPromoCycleContainer {
 display: none;   
}
#mpPatreonContainer {
    background-color: rgba(0, 0, 0, 0.5);
    display: none;
}
#mpPromoOuterContainer {
    display: none;
}

#awSkinPreviewContainer {
    background-color: transparent;
    display: none;
}
.lobbyAvatarNameContainer {
    background-color: rgba(0, 0, 0, 0.3);
}
.qpAvatarImgContainer {
    background-color: rgba(0, 0, 0, 0.5);
    outline: 2px solid DimGray;
}
.avatarUserImgContainer {
    box-shadow: none;
}
#brMapContent {
    background-color: #3E333D; /*Color of battle royale map*/
}
.brShowEntry, .brMapObject {
    background-color: rgba(103, 52, 173); /*Change the color of songs of the battle royale map*/
}
.topMenuBar {
    background-color: transparent;
}


.ps > .ps__scrollbar-y-rail > .ps__scrollbar-y { /*This part belongs to Elodie*/
      position: absolute;
      /* please don't change 'position' */
      background-color: #faf5f5;
      -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
      border-radius: 6px;
      -webkit-transition: background-color .2s linear, height .2s linear, width .2s ease-in-out, -webkit-border-radius .2s ease-in-out;
      transition: background-color .2s linear, height .2s linear, width .2s ease-in-out, -webkit-border-radius .2s ease-in-out;
      -o-transition: background-color .2s linear, height .2s linear, width .2s ease-in-out, border-radius .2s ease-in-out;
      -moz-transition: background-color .2s linear, height .2s linear, width .2s ease-in-out, border-radius .2s ease-in-out, -moz-border-radius .2s ease-in-out;
      transition: background-color .2s linear, height .2s linear, width .2s ease-in-out, border-radius .2s ease-in-out;
      transition: background-color .2s linear, height .2s linear, width .2s ease-in-out, border-radius .2s ease-in-out, -webkit-border-radius .2s ease-in-out, -moz-border-radius .2s ease-in-out;
      right: 2px;
      /* there must be 'right' for ps__scrollbar-y */
      width: 6px; }
 .ps:hover > .ps__scrollbar-y-rail:hover > .ps__scrollbar-y {
      background-color: #2cb0d1; 
}

#qpVideoOverflowContainer { /*Parte del video*/
    background: rgba(0, 0, 0, 0.7); 
    /*background-image: url("https://i.imgur.com/hMvjFI7.jpg");*/
    box-shadow: none;
}

#lbStartButton, #lnSettingsButton, #gcInput, #roomBrowserHostButton{
    background-color: rgba(0, 0, 0, 0.5);    
    color: white;
    text-shadow: 1px 1px #17202a;
}
#lobbyCountLoad {
    background-color: rgba(68, 151, 234, 0.5);     
}
#gcInputContainer {
    background-color: white;
}
#gcEmojiPickerButton > i {
    color: white;
}

#qpAnswerInputContainer.floatingContainer {
    background-color: transparent;
}

#qpAnswerInputContainer.focused {
    box-shadow: none;

}
#qpVoteSkip {
    background-color: rgba(46, 63, 99);
}
#qpVoteSkip.toggled { /*Change Vote Skip Button*/
    background-color: rgba(185, 147, 237);

}
#qpVideoProgressBar { /*Change colour bar video*/
    background-color: #A30DBB;
}
.qpSingleRateContainer { /*Report bar*/
    background-color: rgba(0, 0, 0, 0.0);
                                            
}

.qpAvatarAnswerContainer.rightAnswer + .qpAvatarImgContainer {

	box-shadow: inset 0 0 10px #2b47ff, 0 0 10px #2b47ff, 0 0 10px #2b47ff, 0 0 10px #2b47ff !important;
}


.qpAvatarAnswerContainer.wrongAnswer + .qpAvatarImgContainer {

	box-shadow: 0 0 10px #ff0000, 0 0 10px #ff0000, 0 0 10px #ff0000, 0 0 10px #ff0000 !important;
}

.qpAvatarAnswerText {
    text-align: centre;
	border-right: 17px solid transparent;
	border-left: 10px solid transparent;
}

/*Guesses*/
tr.header {
    background-color: rgba(0, 0, 0, 0.8);
}

tr.songData.clickAble.guessHidden {
    background-color: rgba(0, 0, 0, 0.8) !important;
}

tr.songData.clickAble.correctGuess {
    background-color: rgba(0, 70, 0, .6);
}

tr.songData.clickAble.incorrectGuess {
    background-color: rgba(70, 0, 0, .6);
}
#roomBrowserHostButton{
    background-color: transparent !important; /*Host botton*/
    box-shadow: none;
}

#mpInstalled.button.floatingContainer.mainMenuButton { /*If you have scripts*/
    background-color: rgba(0, 0, 0, 0.5);
}
.gcList > li:nth-child(2n) { /*Chat*/
    background: none;
}
#lobbyCountContainer {
	background: rgba(0, 0, 0, 0.8);
    top: -15px;
}
.gcInputContainer {
    background-color: rgba(0, 0, 0, 0.7);
    background-size: 100% auto !important;
    background-attachment: fixed !important;
    background-position: 0px !important;
    
}
#qpInfoHider {
    background-color: #1b1b1b;
    height: calc(100% - 30px);
}
#qpVideoHider {
    background-color: #1b1b1b;
}
#qpAnimeNameHider {
    background-color: #1b1b1b;
}
#mainMenuSocailButton, #avatarUserImgContainer, #awContentRow, #awMainView, .gcInputContainer, .qpSideContainer, .qpAnimeNameContainer, #qpCounter, #qpWaitBuffering {
    background-color: rgba(0, 0, 0, 0.7);
    background-size: 100% auto !important;
    background-attachment: fixed !important;
    background-position: 0px !important;
    
}
.qpAvatarStatus {
    background: rgba(47, 127, 145, 0.0);
}
.qpAvatarAnswerContainer.rightAnswer .qpAvatarAnswer {
    box-shadow: none;
    text-shadow: none;
}
.qpAvatarAnswerContainer.wrongAnswer .qpAvatarAnswer {
    box-shadow: none;
    text-shadow: none;
}
.chatBoxContainer .header {
	-webkit-box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.89);
	box-shadow: 0px 4px 10px -3px rgba(0, 0, 0, 0.89);
	border-bottom: solid 1px #1b1b1b;
	font-size: 14px;
	line-height: 14px;
	font-weight: normal;
	overflow: hidden;
}
.chatBoxContainer .header .row{
 margin: 0px 0 0 0px;
}

.qpAvatarStatus > h4{
    color: white !important;
}

.qpAvatarListBar.completed{
 	background-color: #DC00FF !important;   
}

.qpAvatarListBar.watching{
 	background-color: #05FF2B !important;   
}

.qpAvatarListBar.hold {
	background-color: #f1c83e !important;
}

.qpAvatarListBar.dropped {
	background-color: #a12f31 !important;
}

.qpAvatarListBar.planning {
	background-color: #c3c3c3 !important;
}
/*
#qpVideoHider.qpVideoOverlay {
    background-image: url(https://www.project-imas.com/w/images/7/79/IoriStarlit.png);
    background-repeat: no-repeat;
}
*/
#footerMenuBarBackground {
	position: absolute;
	width: 100%;
	height: 100%;
}
}

